package Comunidad_Modulo.core;

public class UsuarioTemp {
    
}
