package Comunidad_Modulo.mensajeria_priv;

public class Mensaje {
    
}
